RESOLVED FIXED183566
Don't invalidate descendants for nth pseudo classes unless needed
https://bugs.webkit.org/show_bug.cgi?id=183566
Summary Don't invalidate descendants for nth pseudo classes unless needed
Antti Koivisto
Reported 2018-03-12 06:59:42 PDT
Avoid unnecessary invalidation
Attachments
patch (29.57 KB, patch)
2018-03-12 07:10 PDT, Antti Koivisto
no flags
patch (29.55 KB, patch)
2018-03-12 07:11 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2018-03-12 07:10:22 PDT
Antti Koivisto
Comment 2 2018-03-12 07:11:49 PDT
Radar WebKit Bug Importer
Comment 3 2018-03-12 08:04:05 PDT
WebKit Commit Bot
Comment 4 2018-03-12 09:15:51 PDT
Comment on attachment 335592 [details] patch Clearing flags on attachment: 335592 Committed r229537: <https://trac.webkit.org/changeset/229537>
WebKit Commit Bot
Comment 5 2018-03-12 09:15:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.